# libstrdo

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
cmake/: iconv-config.cmake
include/: strdo.hpp
src/: strdo.cpp
tests/: CMakeLists.txt  convert-enc.cpp  split.cpp  trim.cpp
tests/samples/: gb18030.txt  utf8.txt
